--- a/regext/src/github.com/johnstarich/go/regext/extended.go.html
+++ b/regext/src/github.com/johnstarich/go/regext/extended.go.html
@@ -1,32 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#375EAB">
+<!DOCTYPE html><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="theme-color" content="#375EAB"/>
 
   <title>src/github.com/johnstarich/go/regext/extended.go - GoPages</title>
 
-<link type="text/css" rel="stylesheet" href="/go/regext/lib/godoc/style.css">
+<link type="text/css" rel="stylesheet" href="/go/regext/lib/godoc/style.css"/>
 
 <script>window.initFuncs = [];</script>
-<script src="/go/regext/lib/godoc/jquery.js" defer></script>
+<script src="/go/regext/lib/godoc/jquery.js" defer=""></script>
 
 
 
 <script>var goVersion = "go1.13.11";</script>
-<script src="/go/regext/lib/godoc/godocs.js" defer></script>
+<script src="/go/regext/lib/godoc/godocs.js" defer=""></script>
 </head>
 <body>
 
-<div id='lowframe' style="position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;">
+<div id="lowframe" style="position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;">
 ...
 </div><!-- #lowframe -->
 
 <div id="topbar" class="wide"><div class="container">
-<div class="top-heading" id="heading-wide"><a href="/go/regext/pkg/">GoPages | Auto-generated docs</a></div>
-<div class="top-heading" id="heading-narrow"><a href="/go/regext/pkg/">GoPages</a></div>
-<a href="#" id="menu-button"><span id="menu-button-arrow">&#9661;</span></a>
+<div class="top-heading" id="heading-wide"><a href="/go/regext/pkg/github.com/johnstarich/go/regext/">GoPages | Auto-generated docs</a></div>
+<div class="top-heading" id="heading-narrow"><a href="/go/regext/pkg/github.com/johnstarich/go/regext/">GoPages</a></div>
+<a href="#" id="menu-button"><span id="menu-button-arrow">▽</span></a>
 
 </div></div>
 
@@ -38,7 +36,7 @@
 
   <h1>
     Source file
-    <a href="/src">src</a>/<a href="/src/github.com">github.com</a>/<a href="/src/github.com/johnstarich">johnstarich</a>/<a href="/src/github.com/johnstarich/go">go</a>/<a href="/src/github.com/johnstarich/go/regext">regext</a>/<span class="text-muted">extended.go</span>
+    <a href="/go/regext/src">src</a>/<a href="/go/regext/src/github.com">github.com</a>/<a href="/go/regext/src/github.com/johnstarich">johnstarich</a>/<a href="/go/regext/src/github.com/johnstarich/go">go</a>/<a href="/go/regext/src/github.com/johnstarich/go/regext">regext</a>/<span class="text-muted">extended.go</span>
   </h1>
 
 
@@ -46,7 +44,7 @@
 
 
   <h2>
-    Documentation: <a href="/pkg/github.com/johnstarich/go/regext">github.com/johnstarich/go/regext</a>
+    Documentation: <a href="/go/regext/pkg/github.com/johnstarich/go/regext">github.com/johnstarich/go/regext</a>
   </h2>
 
 
@@ -54,54 +52,55 @@
 <div id="nav"></div>
 
 
-<script type='text/javascript'>document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1&nbsp;&nbsp;</span>package regext
-<span id="L2" class="ln">     2&nbsp;&nbsp;</span>
-<span id="L3" class="ln">     3&nbsp;&nbsp;</span>import (
-<span id="L4" class="ln">     4&nbsp;&nbsp;</span>	&#34;regexp&#34;
-<span id="L5" class="ln">     5&nbsp;&nbsp;</span>	&#34;strings&#34;
-<span id="L6" class="ln">     6&nbsp;&nbsp;</span>)
-<span id="L7" class="ln">     7&nbsp;&nbsp;</span>
-<span id="L8" class="ln">     8&nbsp;&nbsp;</span>var (
-<span id="L9" class="ln">     9&nbsp;&nbsp;</span>	whitespaceRe = regexp.MustCompile(`\s+`)
-<span id="L10" class="ln">    10&nbsp;&nbsp;</span>	commentsRe   = regexp.MustCompile(`(?:\\#|[^#])*`)
-<span id="L11" class="ln">    11&nbsp;&nbsp;</span>)
-<span id="L12" class="ln">    12&nbsp;&nbsp;</span>
-<span id="L13" class="ln">    13&nbsp;&nbsp;</span><span class="comment">// MustCompile compiles expr as a regular expression in a Perl-like &#34;extended&#34; mode where whitespace characters and comments are ignored</span>
-<span id="L14" class="ln">    14&nbsp;&nbsp;</span>func MustCompile(expr string) *regexp.Regexp {
-<span id="L15" class="ln">    15&nbsp;&nbsp;</span>	return regexp.MustCompile(extendedRegexp(expr))
-<span id="L16" class="ln">    16&nbsp;&nbsp;</span>}
-<span id="L17" class="ln">    17&nbsp;&nbsp;</span>
-<span id="L18" class="ln">    18&nbsp;&nbsp;</span><span class="comment">// Compile compiles expr as a regular expression in a Perl-like &#34;extended&#34; mode where whitespace characters and comments are ignored</span>
-<span id="L19" class="ln">    19&nbsp;&nbsp;</span>func Compile(expr string) (*regexp.Regexp, error) {
-<span id="L20" class="ln">    20&nbsp;&nbsp;</span>	return regexp.Compile(extendedRegexp(expr))
-<span id="L21" class="ln">    21&nbsp;&nbsp;</span>}
-<span id="L22" class="ln">    22&nbsp;&nbsp;</span>
-<span id="L23" class="ln">    23&nbsp;&nbsp;</span>func extendedRegexp(expr string) string {
-<span id="L24" class="ln">    24&nbsp;&nbsp;</span>	expr = removeComments(expr)
-<span id="L25" class="ln">    25&nbsp;&nbsp;</span>	expr = removeWhitespace(expr)
-<span id="L26" class="ln">    26&nbsp;&nbsp;</span>	return expr
-<span id="L27" class="ln">    27&nbsp;&nbsp;</span>}
-<span id="L28" class="ln">    28&nbsp;&nbsp;</span>
-<span id="L29" class="ln">    29&nbsp;&nbsp;</span>func removeComments(expr string) string {
-<span id="L30" class="ln">    30&nbsp;&nbsp;</span>	lines := strings.Split(expr, &#34;\n&#34;)
-<span id="L31" class="ln">    31&nbsp;&nbsp;</span>	for i := range lines {
-<span id="L32" class="ln">    32&nbsp;&nbsp;</span>		lines[i] = commentsRe.FindStringSubmatch(lines[i])[0]
-<span id="L33" class="ln">    33&nbsp;&nbsp;</span>	}
-<span id="L34" class="ln">    34&nbsp;&nbsp;</span>	return strings.Join(lines, &#34;\n&#34;)
-<span id="L35" class="ln">    35&nbsp;&nbsp;</span>}
-<span id="L36" class="ln">    36&nbsp;&nbsp;</span>
-<span id="L37" class="ln">    37&nbsp;&nbsp;</span>func removeWhitespace(expr string) string {
-<span id="L38" class="ln">    38&nbsp;&nbsp;</span>	return strings.Join(whitespaceRe.Split(expr, -1), &#34;&#34;)
-<span id="L39" class="ln">    39&nbsp;&nbsp;</span>}
-<span id="L40" class="ln">    40&nbsp;&nbsp;</span>
-</pre><p><a href="/src/github.com/johnstarich/go/regext/extended.go?m=text">View as plain text</a></p>
+<script type="text/javascript">document.ANALYSIS_DATA = null;</script>
+<pre><span id="L1" class="ln">     1  </span>package regext
+<span id="L2" class="ln">     2  </span>
+<span id="L3" class="ln">     3  </span>import (
+<span id="L4" class="ln">     4  </span>	&#34;regexp&#34;
+<span id="L5" class="ln">     5  </span>	&#34;strings&#34;
+<span id="L6" class="ln">     6  </span>)
+<span id="L7" class="ln">     7  </span>
+<span id="L8" class="ln">     8  </span>var (
+<span id="L9" class="ln">     9  </span>	whitespaceRe = regexp.MustCompile(`\s+`)
+<span id="L10" class="ln">    10  </span>	commentsRe   = regexp.MustCompile(`(?:\\#|[^#])*`)
+<span id="L11" class="ln">    11  </span>)
+<span id="L12" class="ln">    12  </span>
+<span id="L13" class="ln">    13  </span><span class="comment">// MustCompile compiles expr as a regular expression in a Perl-like &#34;extended&#34; mode where whitespace characters and comments are ignored</span>
+<span id="L14" class="ln">    14  </span>func MustCompile(expr string) *regexp.Regexp {
+<span id="L15" class="ln">    15  </span>	return regexp.MustCompile(extendedRegexp(expr))
+<span id="L16" class="ln">    16  </span>}
+<span id="L17" class="ln">    17  </span>
+<span id="L18" class="ln">    18  </span><span class="comment">// Compile compiles expr as a regular expression in a Perl-like &#34;extended&#34; mode where whitespace characters and comments are ignored</span>
+<span id="L19" class="ln">    19  </span>func Compile(expr string) (*regexp.Regexp, error) {
+<span id="L20" class="ln">    20  </span>	return regexp.Compile(extendedRegexp(expr))
+<span id="L21" class="ln">    21  </span>}
+<span id="L22" class="ln">    22  </span>
+<span id="L23" class="ln">    23  </span>func extendedRegexp(expr string) string {
+<span id="L24" class="ln">    24  </span>	expr = removeComments(expr)
+<span id="L25" class="ln">    25  </span>	expr = removeWhitespace(expr)
+<span id="L26" class="ln">    26  </span>	return expr
+<span id="L27" class="ln">    27  </span>}
+<span id="L28" class="ln">    28  </span>
+<span id="L29" class="ln">    29  </span>func removeComments(expr string) string {
+<span id="L30" class="ln">    30  </span>	lines := strings.Split(expr, &#34;\n&#34;)
+<span id="L31" class="ln">    31  </span>	for i := range lines {
+<span id="L32" class="ln">    32  </span>		lines[i] = commentsRe.FindStringSubmatch(lines[i])[0]
+<span id="L33" class="ln">    33  </span>	}
+<span id="L34" class="ln">    34  </span>	return strings.Join(lines, &#34;\n&#34;)
+<span id="L35" class="ln">    35  </span>}
+<span id="L36" class="ln">    36  </span>
+<span id="L37" class="ln">    37  </span>func removeWhitespace(expr string) string {
+<span id="L38" class="ln">    38  </span>	return strings.Join(whitespaceRe.Split(expr, -1), &#34;&#34;)
+<span id="L39" class="ln">    39  </span>}
+<span id="L40" class="ln">    40  </span>
+</pre><p></p>
 
 <div id="footer">
-Build version go1.13.11.<br>
+Build version go1.13.11.<br/>
 </div>
 
 </div><!-- .container -->
 </div><!-- #page -->
-</body>
-</html>
+
+
+</body></html>
