--- a/dns/pkg/github.com/johnstarich/go/dns/staggercast/index.html
+++ b/dns/pkg/github.com/johnstarich/go/dns/staggercast/index.html
@@ -15,7 +15,7 @@
 
 
 
-<script>var goVersion = "go1.13.12";</script>
+<script>var goVersion = "go1.15.3";</script>
 <script src="/go/dns/lib/godoc/godocs.js" defer></script>
 </head>
 <body>
@@ -160,7 +160,7 @@
 			
 			<pre>type Conn interface {
     <a href="#PacketConn">PacketConn</a>
-    Stagger(ticker &lt;-chan struct{}, cancel <a href="/pkg/context/">context</a>.<a href="/pkg/context/#CancelFunc">CancelFunc</a>)
+    Stagger(ticker &lt;-chan struct{}, cancel <a href="/go/dns/pkg/context/">context</a>.<a href="/go/dns/pkg/context/#CancelFunc">CancelFunc</a>)
     Stats() <a href="#Stats">Stats</a>
 }</pre>
 
@@ -199,10 +199,10 @@ PacketConn implements both net.Conn and net.PacketConn
 </p>
 
 			<pre>type PacketConn interface {
-    <a href="/pkg/io/">io</a>.<a href="/pkg/io/#Reader">Reader</a>
-    <a href="/pkg/io/">io</a>.<a href="/pkg/io/#Writer">Writer</a>
-    RemoteAddr() <a href="/pkg/net/">net</a>.<a href="/pkg/net/#Addr">Addr</a>
-    <a href="/pkg/net/">net</a>.<a href="/pkg/net/#PacketConn">PacketConn</a>
+    <a href="/go/dns/pkg/io/">io</a>.<a href="/go/dns/pkg/io/#Reader">Reader</a>
+    <a href="/go/dns/pkg/io/">io</a>.<a href="/go/dns/pkg/io/#Writer">Writer</a>
+    RemoteAddr() <a href="/go/dns/pkg/net/">net</a>.<a href="/go/dns/pkg/net/#Addr">Addr</a>
+    <a href="/go/dns/pkg/net/">net</a>.<a href="/go/dns/pkg/net/#PacketConn">PacketConn</a>
 }</pre>
 
 			
@@ -226,8 +226,8 @@ PacketConn implements both net.Conn and net.PacketConn
 			</h2>
 			
 			<pre>type Stats struct {
-<span id="Stats.FastestRemoteIndex"></span>    FastestRemoteIndex <a href="/pkg/builtin/#int">int</a>
-<span id="Stats.FastestRemote"></span>    FastestRemote      <a href="/pkg/net/">net</a>.<a href="/pkg/net/#Addr">Addr</a>
+<span id="Stats.FastestRemoteIndex"></span>    FastestRemoteIndex <a href="/go/dns/pkg/builtin/#int">int</a>
+<span id="Stats.FastestRemote"></span>    FastestRemote      <a href="/go/dns/pkg/net/">net</a>.<a href="/go/dns/pkg/net/#Addr">Addr</a>
 }
 </pre>
 
@@ -254,7 +254,7 @@ PacketConn implements both net.Conn and net.PacketConn
 
 
 <div id="footer">
-Build version go1.13.12.<br>
+Build version go1.15.3.<br>
 </div>
 
 </div><!-- .container -->
