--- a/dns/pkg/github.com/johnstarich/go/dns/testhelpers/index.html
+++ b/dns/pkg/github.com/johnstarich/go/dns/testhelpers/index.html
@@ -15,7 +15,7 @@
 
 
 
-<script>var goVersion = "go1.13.12";</script>
+<script>var goVersion = "go1.15.3";</script>
 <script src="/go/dns/lib/godoc/godocs.js" defer></script>
 </head>
 <body>
@@ -146,7 +146,7 @@
 				
 				
 			</h2>
-			<pre>func StartDNSServer(t *<a href="/pkg/testing/">testing</a>.<a href="/pkg/testing/#T">T</a>, config <a href="#DNSConfig">DNSConfig</a>) (address <a href="/pkg/builtin/#string">string</a>, cancel <a href="/pkg/context/">context</a>.<a href="/pkg/context/#CancelFunc">CancelFunc</a>)</pre>
+			<pre>func StartDNSServer(t *<a href="/go/dns/pkg/testing/">testing</a>.<a href="/go/dns/pkg/testing/#T">T</a>, config <a href="#DNSConfig">DNSConfig</a>) (address <a href="/go/dns/pkg/builtin/#string">string</a>, cancel <a href="/go/dns/pkg/context/">context</a>.<a href="/go/dns/pkg/context/#CancelFunc">CancelFunc</a>)</pre>
 			
 			
 			
@@ -162,9 +162,9 @@
 			</h2>
 			
 			<pre>type DNSConfig struct {
-<span id="DNSConfig.ResponseDelay"></span>    ResponseDelay <a href="/pkg/time/">time</a>.<a href="/pkg/time/#Duration">Duration</a>
-<span id="DNSConfig.Hostnames"></span>    Hostnames     map[<a href="/pkg/builtin/#string">string</a>][]<a href="/pkg/builtin/#string">string</a>
-<span id="DNSConfig.Port"></span>    Port          <a href="/pkg/builtin/#int">int</a>
+<span id="DNSConfig.ResponseDelay"></span>    ResponseDelay <a href="/go/dns/pkg/time/">time</a>.<a href="/go/dns/pkg/time/#Duration">Duration</a>
+<span id="DNSConfig.Hostnames"></span>    Hostnames     map[<a href="/go/dns/pkg/builtin/#string">string</a>][]<a href="/go/dns/pkg/builtin/#string">string</a>
+<span id="DNSConfig.Port"></span>    Port          <a href="/go/dns/pkg/builtin/#int">int</a>
 }
 </pre>
 
@@ -191,7 +191,7 @@
 
 
 <div id="footer">
-Build version go1.13.12.<br>
+Build version go1.15.3.<br>
 </div>
 
 </div><!-- .container -->
