--- a/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/index.html
@@ -15,7 +15,7 @@
 
 
 
-<script>var goVersion = "go1.13.12";</script>
+<script>var goVersion = "go1.15.3";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer></script>
 </head>
 <body>
@@ -147,7 +147,7 @@
 				
 				
 			</h2>
-			<pre>func Docs(modulePath, modulePackage <a href="/pkg/builtin/#string">string</a>, src, fs billy.<a href="#Filesystem">Filesystem</a>, args <a href="/pkg/github.com/johnstarich/go/gopages/internal/flags/">flags</a>.<a href="/pkg/github.com/johnstarich/go/gopages/internal/flags/#Args">Args</a>) <a href="/pkg/builtin/#error">error</a></pre>
+			<pre>func Docs(modulePath, modulePackage <a href="/go/gopages/pkg/builtin/#string">string</a>, src, fs billy.<a href="#Filesystem">Filesystem</a>, args <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/flags/">flags</a>.<a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/flags/#Args">Args</a>) <a href="/go/gopages/pkg/builtin/#error">error</a></pre>
 			
 			
 			
@@ -165,7 +165,7 @@
 
 
 <div id="footer">
-Build version go1.13.12.<br>
+Build version go1.15.3.<br>
 </div>
 
 </div><!-- .container -->
