--- a/gopages/src/github.com/johnstarich/go/gopages/index.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/index.html
@@ -13,7 +13,7 @@
 
 
 
-<script>var goVersion = "go1.15.3";</script>
+<script>var goVersion = "go1.15.12";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
 </head>
 <body>
@@ -78,7 +78,7 @@
 	<td></td>
 	<td align="right">5</td>
 	<td></td>
-	<td align="left">2020-10-21 03:34:40 +0000 UTC</td>
+	<td align="left">2021-05-23 22:22:28.643984386 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -87,7 +87,7 @@
 	<td></td>
 	<td align="right">455</td>
 	<td></td>
-	<td align="left">2020-10-21 03:34:40 +0000 UTC</td>
+	<td align="left">2021-05-23 22:22:28.643984386 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -96,7 +96,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2020-10-21 03:34:40 +0000 UTC</td>
+	<td align="left">2021-05-23 22:22:28.643984386 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -105,7 +105,7 @@
 	<td></td>
 	<td align="right">939</td>
 	<td></td>
-	<td align="left">2020-10-21 03:34:40 +0000 UTC</td>
+	<td align="left">2021-05-23 22:22:28.643984386 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -114,7 +114,7 @@
 	<td></td>
 	<td align="right">373</td>
 	<td></td>
-	<td align="left">2020-10-21 03:34:40 +0000 UTC</td>
+	<td align="left">2021-05-23 22:22:28.643984386 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -123,7 +123,7 @@
 	<td></td>
 	<td align="right">10412</td>
 	<td></td>
-	<td align="left">2020-10-21 03:34:40 +0000 UTC</td>
+	<td align="left">2021-05-23 22:22:28.643984386 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -132,7 +132,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2020-10-21 03:34:40 +0000 UTC</td>
+	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -141,7 +141,7 @@
 	<td></td>
 	<td align="right">5374</td>
 	<td></td>
-	<td align="left">2020-10-21 03:34:40 +0000 UTC</td>
+	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -150,7 +150,7 @@
 	<td></td>
 	<td align="right">5430</td>
 	<td></td>
-	<td align="left">2020-10-21 03:34:40 +0000 UTC</td>
+	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
 </tr>
 
 
@@ -159,7 +159,7 @@
 
 
 <div id="footer">
-Build version go1.15.3.<br/>
+Build version go1.15.12.<br/>
 </div>
 
 </div><!-- .container -->
