--- a/gopages/src/github.com/johnstarich/go/gopages/internal/generate/index.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/generate/index.html
@@ -13,7 +13,7 @@
 
 
 
-<script>var goVersion = "go1.15.3";</script>
+<script>var goVersion = "go1.15.12";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
 </head>
 <body>
@@ -78,7 +78,7 @@
 	<td></td>
 	<td align="right">11400</td>
 	<td></td>
-	<td align="left">2020-10-21 03:34:40 +0000 UTC</td>
+	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -87,7 +87,7 @@
 	<td></td>
 	<td align="right">2693</td>
 	<td></td>
-	<td align="left">2020-10-21 03:34:40 +0000 UTC</td>
+	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -96,7 +96,7 @@
 	<td></td>
 	<td align="right">2980</td>
 	<td></td>
-	<td align="left">2020-10-21 03:34:40 +0000 UTC</td>
+	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -105,7 +105,7 @@
 	<td></td>
 	<td align="right">1606</td>
 	<td></td>
-	<td align="left">2020-10-21 03:34:40 +0000 UTC</td>
+	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -114,7 +114,7 @@
 	<td></td>
 	<td align="right">3619</td>
 	<td></td>
-	<td align="left">2020-10-21 03:34:40 +0000 UTC</td>
+	<td align="left">2021-05-23 22:22:28.647984437 +0000 UTC</td>
 </tr>
 
 
@@ -123,7 +123,7 @@
 
 
 <div id="footer">
-Build version go1.15.3.<br/>
+Build version go1.15.12.<br/>
 </div>
 
 </div><!-- .container -->
